ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # tls: 
  # - hosts: 
  #   - localhost
  #   secretName: hwicheon-com
  rules:
  - host: grafana.hwicheon.co.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: prometheus.hwicheon.co.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
